# holosoma-extensions

./: .gitignore  .gitmodules  README.md
scripts/: README.md  setup_inference.sh  setup_isaacgym.sh  setup_isaacsim.sh  setup_mujoco.sh  source_inference_setup.sh  source_isaacgym_setup.sh  source_isaacsim_setup.sh  source_mujoco_setup.sh
src/holosoma_ext/: README.md  pyproject.toml
src/holosoma_ext/holosoma_ext/: __init__.py  eval_agent.py  run_sim.py  train_agent.py  utils.py
src/holosoma_ext/holosoma_ext/config_values/: command.py  experiment.py  reward.py  robot.py  termination.py
src/holosoma_ext/holosoma_ext/data/robots/go2/: go2_12dof.urdf  go2_12dof.xml
src/holosoma_ext/holosoma_ext/managers/: __init__.py
src/holosoma_ext/holosoma_ext/managers/command/: __init__.py
src/holosoma_ext/holosoma_ext/managers/command/terms/: __init__.py  locomotion.py
src/holosoma_ext/holosoma_ext/managers/reward/terms/: __init__.py  locomotion.py
src/holosoma_inference_ext/: README.md  pyproject.toml  setup.py
src/holosoma_inference_ext/holosoma_inference_ext/: __init__.py  run_policy.py
src/holosoma_inference_ext/holosoma_inference_ext/config_values/: __init__.py  inference.py  observation.py  robot.py
src/holosoma_inference_ext/holosoma_inference_ext/models/: model_go2.onnx
